--- a/dataset_initilization_script.ipynb
+++ b/dataset_initilization_script.ipynb
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0xfcc4500>"
+       "<sqlite3.Cursor at 0xfce36c0>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,6 +346,20 @@
    "source": [
     "conn_db.commit()\n",
     "conn_db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.execute(\n",
+    "    \"\"\"\n",
+    "    DELETE FROM genres WHERE songId = 203842 \n",
+    "    \"\"\"\n",
+    ")\n",
+    "conn_db.commit()"
    ]
   }
  ],
